Hide overflow in YouTube embed to remove the border radius bug

--- a/css/main.sass
+++ b/css/main.sass
@@ -65,6 +65,7 @@ h1
       margin-top: 20px
       margin-bottom: 20px
       border-radius: 6px
+      overflow: hidden
 
 
   .hexagon
